Makes the main model changeble
